# my-pic-backend

./: .gitignore  README.md  config.py  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
app/: base_model.py  base_schema.py  custom_exceptions.py  db_connection.py  main.py  settings.py
app/db/: connector.py  models.py
app/login/: enums.py  login_api.py  models.py  repositories.py  services.py
app/menu/: menu_api.py  models.py  repositories.py  services.py  shemas.py
app/photo/: models.py  photo_api.py  repositories.py  schemas.py  services.py
app/routers/login/: login_api.py  login_proc.py
app/routers/register/: regist_api.py  regist_proc.py
app/tests/: conftest.py  factories.py
app/work/: models.py  repositories.py  schemas.py  services.py  work_api.py
migration/: alembic.ini
migrations/: env.py
migrations/versions/: ad5c33ab13e8_init.py  e8cefe737163_add_user_table.py
tests/: config.py  conftest.py  connector_test.py  login_test.py  register_test.py
